<resources>
    <string name="app_name">دهکده هوشمند</string>
    <string name="server">http://idpz.ir</string>

    <string name="title_activity_search">نقشه</string>
    <string name="edit_profile">ویرایش پروفایل</string>
    <string name="sign_out">خروج از حساب کاربری</string>
    <string name="upload_send_pic">ارسال عکس</string>
    <string name="upload_select_pic">انتخاب عکس</string>
    <string name="title_activity_login">ورود</string>
    <string name="contact_us">تماس با ما</string>
    <string name="complain">شکایت</string>

    <string name="ok">تایید</string>
    <string name="no_internet">به نظر میاد اینترنت دستگاه وصل نیست</string>
    <string name="select_on_map">موقعیت را روی نقشه انتخاب کنید</string>
    <string name="subscribe_successfully">با موفقیت به کانال وصل شدید</string>
    <string name="subscribe_progress_dialog_message">درحال اتصال به کانال</string>


    <!-- Strings related to login -->
    <string name="prompt_email">شماره موبایل</string>
    <string name="prompt_password">کلمه عبور</string>
    <string name="action_sign_in">ورود</string>
    <string name="add_city">شهر/روستای جدید</string>
    <string name="action_sign_up">ثبت نام</string>
    <string name="action_sign_in_short">ورود</string>
    <string name="city_search">جستجوی شهر</string>
    <string name="mobile_start_with09">شماره موبایل را با 09 شروع کنید</string>
    <string name="select_city">جستجوی منطقه</string>
    <string name="select_pic">انتخاب عکس</string>
    <string name="action_sign_out_short">خروج</string>
    <string name="error_invalid_email">این موبایل معتبر نیست</string>
    <string name="error_invalid_password">کلمه عبور کوتاه است</string>
    <string name="error_incorrect_password">کلمه عبور کوتاه است</string>
    <string name="error_field_required">این قسمت اجباریست</string>


    <string name="receiving_forecast">دریافت آب و هوا</string>
    <string name="tempreture">دمای هوا</string>
    <string name="humidity">رطوبت</string>
    <string name="max_temp">حداکثر</string>
    <string name="min_temp">حداقل </string>
    <string name="wind_speed">سرعت باد</string>
    <string name="next_day_forecast">پیش بینی هوای روزهای آینده</string>


    <string name="text">Squid blog crucifix Marfa, consectetur vero placeat mixtape. Non seitan sriracha eu, do Banksy fashion axe cred qui vegan delectus consequat Helvetica mollit. XOXO gluten-free disrupt, gastropub officia cliche chillwave hella pop-up. Fixie swag raw denim, YOLO craft beer assumenda occupy veniam photo booth pug consectetur next level Portland tote bag +1. Mlkshk PBR aliquip placeat Wes Anderson.</string>
    <string name="title">My Description</string>
    <string name="context_menu">Context menu</string>


    <string name="health">سلامت</string>
    <string name="bank">پست بانک</string>
    <string name="consult">مشاوره</string>
    <string name="insurance">بیمه</string>


    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="hoshdar">توجه:مسوولیت صحت  اطلاعات وارد شده به عهده آگهی دهنده است .دهکده هوشمند هیچ گونه مسئولیتی در قبال آن ندارد. </string>
    <!-- fragment names -->
    <string name="edit_profile_fragment">ویرایش اطلاعات شخصی</string>
    <string name="view_post_fragment">مشاهده مطلب</string>
    <string name="sign_out_fragment">خروج</string>
    <string name="profile_fragment">اطلاعات شخصی</string>
    <string name="view_profile_fragment">مشاهده اطلاعات</string>
    <string name="view_comments_fragment">مشاهده نظرات</string>

    <!-- dialog names -->
    <string name="confirm_password_dialog">تایید رمز ورود</string>
    <string name="result">نتیجه</string>
    <string name="search">جستجو</string>


    <!-- Firebase messages -->
    <string name="auth_failed">خطا در تایید اعتبار</string>
    <string name="auth_success">اعتبار تایید شد</string>


    <!-- Firebase database fields -->
    <string name="dbname_users">users</string>
    <string name="dbname_user_account_settings">user_account_settings</string>
    <string name="dbname_photos">photos</string>
    <string name="dbname_user_photos">user_photos</string>
    <string name="dbname_following">following</string>
    <string name="dbname_followers">followers</string>
    <string name="field_username">username</string>
    <string name="field_email">email</string>
    <string name="field_display_name">display_name</string>
    <string name="field_website">website</string>
    <string name="field_description">description</string>
    <string name="field_phone_number">شماره موبایل</string>
    <string name="field_user_id">user_id</string>
    <string name="field_likes">likes</string>
    <string name="field_caption">caption</string>
    <string name="field_date_created">date_created</string>
    <string name="field_photo_id">photo_id</string>
    <string name="field_tags">tags</string>
    <string name="field_image_path">image_path</string>
    <string name="field_comments">نظرات</string>


    <!-- photo types -->
    <string name="new_photo">new_photo</string>
    <string name="profile_photo">profile_photo</string>

    <string name="social_send">ارسال پیام شهروندی</string>
    <string name="social_message">متن  پیام </string>
    <string name="social_receiver">گیرنده  پیام </string>
    <string name="social_send_now">ارسال  پیام </string>
    <string name="tanx_social"> از مشارکت شما متشکریم </string>
    <string name="social_help"> برای پیگیری مطلب ارسالی از قسمت پروفایل اقدام کنید.
        \n
    بزودی مطلب شما بررسی می شود.
        \n
    درصورتیکه پیام شما برای سایرین نیز مناسب باشد به اشتراک گذاری خواهد شد.

    </string>
    <string name="social_help1">  بزودی مطلب شما بررسی می شود.   </string>
    <string name="social_help2"> درصورتیکه پیام شما برای سایرین نیز مناسب باشد به اشتراک گذاشته خواهد شد.   </string>
    <string name="social_score"> امتیاز کسب شده: 10 امتیاز   </string>

    <!-- Intent Extras -->
    <string name="calling_activity">calling_activity</string>
    <string name="selected_image">selected_image</string>
    <string name="selected_bitmap">selected_bitmap</string>
    <string name="return_to_fragment">return_to_fragment</string>
    <string name="intent_user">intent_user</string>

    <!-- Bundle arg names -->
    <string name="activity_number">activity_number</string>
    <string name="bundle_photo">bundle_photo</string>
    <string name="bundle_user_account_settings">bundle_user_account_settings</string>

    <!-- activity names -->
    <string name="profile_activity">اطلاعات شخصی</string>
    <string name="search_activity">جستجو</string>
    <string name="home_activity">خانه</string>

    <!-- strings -->
    <string name="gallery">گالری</string>
    <string name="photo">دوربین</string>
    <string name="string_open_camera">دوربین</string>
    <string name="string_next">بعدی</string>
    <string name="string_slogan">ما را با بیان مشکلات، ایده ها و نظرات خود یاری کنید</string>
    <string name="string_nopic">بدون عکس</string>
    <string name="string_share">ارسال</string>

    <string-array name="moavenat">
        <item>فرهنگی</item>
        <item>زیباسازی</item>
        <item>ساختمانی</item>
        <item>مالی</item>
        <item>خدمات شهری</item>
        <item>مسئولین شهری</item>
        <item>سایر</item>
    </string-array>
    <string-array name="pmType">
        <item>پیشنهاد</item>
        <item>ایده</item>
        <item>انتقاد</item>
        <item>شکایت</item>
    </string-array>
    <string-array name="edu">
        <item>زیردیپلم</item>
        <item>دیپلم</item>
        <item>کاردانی</item>
        <item>کارشناسی</item>
        <item>کارشناسی ارشد</item>
        <item>دکتری</item>
    </string-array>
    <string-array name="job">
        <item>خانه دار</item>
        <item>کارجو</item>
        <item>دانشجو</item>
        <item>فروشگاه</item>
        <item>تعمیرات</item>
        <item>پزشکی و سلامت</item>
        <item>کشاورز</item>
        <item>ساختمان</item>
        <item>فنی و مهندسی</item>
        <item>خدمات</item>
        <item>فرهنگی</item>
        <item>ورزشی</item>
        <item>اجتماعی</item>
        <item>کارگر</item>
    </string-array>
    <string-array name="Store_tag">
        <item>فرهنگی</item>
        <item>فروشگاه</item>
        <item>سلامت</item>
        <item>مذهبی</item>
        <item>خدمات</item>
        <item>ورزشی</item>
        <item>غذا</item>
        <item>گردشگری</item>
    </string-array>

    <string-array name="Cars">
        <item>اتوبوس</item>
        <item>حمل زباله</item>
    </string-array>

    <string-array name="visitCats">
        <item>جاذبه گردشگری</item>
        <item>صنایع دستی</item>
        <item>اقامتگاه</item>
        <item>نیازمندیها</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="text_outside_circle_button_text_normal">دهکده هوشمند</string>

    <string name="text_ham_button_text_normal">دهکده هوشمند</string>
    <string name="text_ham_button_sub_text_normal">دهکده هوشمند</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_food_tab">FoodTab</string>
    <string name="title_activity_salad_tab">SaladTabActivity</string>

    <string name="text1">خودروهای هوشمند</string>
    <string name="text2">مشاغل</string>
    <string name="text3">گردشگری</string>
    <string name="text4">پیام های مردمی 137</string>
    <string name="text5">آگهی</string>
    <string name="text6">اخبار</string>
    <string name="text7">رسانه</string>
    <string name="text8">تغیرشهر</string>
    <string name="text9">صنایع دستی</string>


    <string name="change_city">تغییر شهر</string>

    <!-- Put your own APP ID here -->
    <string name="open_weather_maps_app_id">11111</string>

    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>

    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>
    <string name="weather">آب و هوا</string>

    <string name="place_not_found">Sorry, no weather data found.</string>
    <string name="title_activity_send_social">SendSocialActivity</string>


</resources>
