<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.idpz.instacity.Home.LoginActivity">

    <!-- Login progress -->
    <ImageView
        android:id="@+id/imgTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/title" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/imgTitle"
    android:layout_marginTop="-25dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    >


                <EditText
                    android:id="@+id/txtLoginMobile"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:padding="5dp"
                    android:hint="@string/prompt_email"
                    android:inputType="number"
                    android:background="@drawable/back_text"
                    android:singleLine="true" />

    <TextView
        android:id="@+id/txtSelectCity"
        android:text="@string/select_city"
        android:textColor="@color/black"
        android:layout_margin="15dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/spnLoginSelCity"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </Spinner>
        <AutoCompleteTextView
            android:id="@+id/acTxtView"
            android:layout_weight="1"
            android:layout_width="150dp"
            android:hint="@string/city_search"
            android:layout_height="wrap_content" />
    </LinearLayout>

            <Button
                android:id="@+id/btnMobileReg"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/back_btn"
                android:text="@string/action_sign_in"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
<TextView
    android:id="@+id/txtLoginInfo"
    android:textColor="@color/black"
    android:gravity="center"
    android:text="@string/mobile_start_with09"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
</LinearLayout>
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />
<com.idpz.instacity.utils.CustomTextView
    android:text="اگر منطقه شما در لیست وجود ندارد آنرا ثبت کنید"
    android:textColor="@color/black"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="75dp"
    android:textSize="16sp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btnCityReg"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/back_btn"
        android:text="@string/add_city"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>
